# privacy-pool-V1.0

./: .gitignore  .gitmodules  History.md  Makefile  README.md  bun.lockb  circomkit.json  circuits.json  compile_privacyPool.sh  foundry.toml  hardhat.config.ts  jest.config.js  package-lock.json  package.json  remappings.txt  tailwind.config.ts  tsconfig.json
app/: fonts.ts  layout.tsx  page copy.tsx  page.tsx
cache_forge/: solidity-files-cache.json
circuits/: EdDSAPoseidonVerifier.circom  associationStep.circom  commitment.circom  getSign.circom  privacyPool.circom  set.circom  sign.circom  txRecordHash.circom
contracts/: .env.example  .gitignore  .gitmodules  README.md  Readme.md  bun.lockb  foundry.toml  hardhat.config.ts  jest.config.cjs  package.json  remappings.txt  tsconfig.json
contracts_b/: Readme.md  remappings.txt
contracts_old/: .env.example  README.md  package.json  tsconfig.json
domainobjs/: README.md  package.json
global/: README.md  index.ts  package.json  tsconfig.json
old_test/: privacyPool.test.ts
src/: OnchainProviders.tsx
test/: privacypool.test.ts
tests/: privacyPool.test.ts  privacyPools.test.ts  proofOfAssociation.test.ts
web/: bun.lockb  next.config.js  package-lock.json  package.json  tsconfig.json
webapp/: package.json  tailwind.config.ts  tsconfig.json
zero-knowledge/: circomkit.json  package.json  tsconfig.json
zk-circuits/: README.md  circuits.json  compile_poi.sh  compile_privacyPool.sh  package.json
zk-circuits/poi-wasm-nova/cbor/: Cargo.toml
zk-circuits/poi-wasm-nova/cbor/src/: lib.rs
zk-circuits/poi-wasm-nova/nova-scotia/: Cargo.toml
zk-circuits/poi-wasm-nova/nova-scotia/src/: lib.rs
zk-circuits/poi-wasm-nova/nova-scotia/src/circom/: wasm.rs
zk-circuits/poi-wasm-nova/nova-scotia/src/circom/wasm_deps/: generate_witness.js  generate_witness_browser.js  witness_calculator.js
(+816 files in other folders)
