[package]
name = "cbor"
version = "0.1.0"
edition = "2021"

[dependencies]
nova-scotia = { path = "../nova-scotia" }
num-bigint = { version = "0.4.4", features = ["serde", "rand"] }
nova-snark = { git = "https://github.com/chainwayxyz/Nova", branch = "hakan/arb" }
num-traits = "0.2.18"
serde = "1.0.198"
serde_json = "1.0.116"
anyhow = "1.0.82"
serde_cbor = "0.11.2"
ff = { version = "0.13", features = ["derive"] }
hex-literal = "0.4.1"
itertools = "0.12.1"
pasta_curves = "0.5.1"
